<resources>
    <string name="app_name">VideoLoaderAPI</string>
    <string name="show_room_id">ID: %s</string>
    <string name="show_welcome">Welcome to VideoLoaderAPI demo!</string>
    <string name="show_enter_demo">Enter</string>
    <string name="show_prejoin_mode">needPreJoin</string>
    <string name="show_slicing_mode">slicingMode</string>
    <string name="show_ui_mode">UI Mode</string>
    <string name="show_settings">settings</string>
    <string name="show_pk">PK</string>
    <string name="show_slicing_type_visible">Visible</string>
    <string name="show_slicing_type_end">END_SCROLL</string>
    <string name="show_ui_type_view_pager">ViewPager</string>
    <string name="show_ui_recycle_view">RecycleView</string>
</resources>