<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_welcome"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSettings"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/show_settings"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUIMode"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/show_ui_mode"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvUIModeShow"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/show_ui_type_view_pager"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spUIMode"
                android:layout_width="45dp"
                android:layout_height="28dp"
                android:checked="false"
                android:entries="@array/show_ui_mode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvOpenSwitch"
                app:layout_constraintBottom_toBottomOf="@+id/tvOpenSwitch"
                android:button="@drawable/cb_def_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOpenSwitch"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/show_prejoin_mode"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/cbSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvOpenSwitch"
                app:layout_constraintBottom_toBottomOf="@+id/tvOpenSwitch"
                android:button="@drawable/cb_def_selector" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSliceMode"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/show_slicing_mode"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSliceModeShow"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/show_slicing_type_visible"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mtBottomSheetTitle" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spSliceMode"
                android:layout_width="45dp"
                android:layout_height="28dp"
                android:checked="false"
                android:entries="@array/show_slice_mode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvOpenSwitch"
                app:layout_constraintBottom_toBottomOf="@+id/tvOpenSwitch"
                android:button="@drawable/cb_def_selector" />
        </LinearLayout>
    </LinearLayout>



    <Button
        android:id="@+id/btEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_enter_demo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>